[BUGFIX] Margin for the content container is too large

--- a/Resources/Public/Css/Layout.css
+++ b/Resources/Public/Css/Layout.css
@@ -1,3 +1,6 @@
+.t3-content-container {
+    margin: 0 -10px 18px;
+}
 .t3-content-area {
     background-color: #fafafa;
     border-bottom: 1px solid #cdcdcd;
